favorite players + stage fix
