# dist/api.yml
@@ -80,42 +80,45 @@ paths:
                   $ref: "#/components/schemas/League"
         "400":
           description: wrong input parameters
-  # /users/favoritePlayers:
-  #   get:
-  #     tags:
-  #       - Users
-  #     summary: Return the favorite players that were saved by user
-  #     parameters:
-  #     responses:
-  #       "200":
-  #         description: data about the user's favorites players returned
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: array
-  #               items:
-  #                 $ref: "#/components/schemas/PlayerPreview"
-  #       "401":
-  #         description: user is not authorized
-  #   post:
-  #     summary: save player in the favorites list of a user
-  #     tags:
-  #       - Users
-  #     requestBody:
-  #       content:
-  #         application/json:
-  #           schema:
-  #             type: object
-  #             properties:
-  #               playerId:
-  #                 type: string
-  #                 description: player's id which the user saved
-  #                 example: 85
-  #     responses:
-  #       "201":
-  #         description: The player successfully saved as favorite
-  #       "401":
-  #         description: user is not authorized
+  /users/favoritePlayers:
+    get:
+      summary: Return the favorite players that were saved by user
+      tags:
+        - Users
+      parameters:
+      responses:
+        "200":
+          description: data about the user's favorites players returned
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/PlayerPreview"
+        "401":
+          description: user is not authorized
+    post:
+      summary: save player in the favorites list of a user
+      tags:
+        - Users
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                playerId:
+                  type: string
+                  description: player's id which the user saved
+                  example: 85
+      responses:
+        "201":
+          description: The player successfully saved as favorite
+        "401":
+          description: user is not authorized
+        "404":
+          description: player id does not exist
+
 
   /players/PlayerFullDetails/{playerID}:
     get:
